# flask-okta

./: .gitignore  .okta.env.example  README.md  app.py  pyproject.toml
.okta/: sample-config.yaml
