[tool.poetry]
name = "flask-okta"
version = "0.1.0"
description = ""
authors = ["Brian Peterson <brian.peterson@cloudshift.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.27.1"
flask = "2.0.2"
flask-cors = "3.0.10"
python-dotenv = "0.19.2"
pyopenssl = "22.0.0"
flask-login = "0.5.0"
werkzeug = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
